--- a/wp-content/themes/henderson/views/base.twig
+++ b/wp-content/themes/henderson/views/base.twig
@@ -14,18 +14,18 @@
 		<div class="wrapper container">
 			<div class="logos">
 				<div class="henderson-logo">
-					<a class="site-logo main-logo" href="{{site.url}}" rel="home">
+					<a class="site-logo main-logo" href="{{site.url}}" rel="home" data-aos="fade-zoom-in" data-aos-easing="ease-in-back">
 						{{source (directory ~ '/static/images/logo/hp-logo.svg') }}
 					</a>
 					{# <a class="site-logo menu-logo" href="{{site.url}}" rel="home">
 																{{source (directory ~ '/static/images/hp-logo-white.svg') }}
 															</a> #}
 				</div>
-				<a class="selkirk-site-logo" href="https://selkirkphysio.ca/" target="_blank" rel="noopener noreferrer" aria-label="Selkirk Website">
+				<a class="selkirk-site-logo" href="https://selkirkphysio.ca/" target="_blank" rel="noopener noreferrer" aria-label="Selkirk Website" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="150">
 					{{source (directory ~ '/static/images/logo/selkirk-logo.svg') }}
 				</a>
 			</div>
-			<div class="button_container" id="toggle" data-aos="fade-zoom-in" data-aos-easing="ease-in-back">
+			<div class="button_container" id="toggle" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay="300">
 				<span class="top"></span>
 				<span class="middle"></span>
 				<span class="bottom"></span>
