--- a/wp-content/themes/henderson/views/page-news-insights.twig
+++ b/wp-content/themes/henderson/views/page-news-insights.twig
@@ -5,13 +5,13 @@
 {% block content %}
     <section class="{{field.slug}}-page padding" id="{{field.slug}}-page">
 			<div class="container">
-				<div class="filters">
+				<div class="filters" data-aos="fade-zoom-in" data-aos-easing="ease-in-back">
 					{{fn('do_shortcode','[searchandfilter query="1" field="news_type"]')}}
 				</div>
-				<div class="filter-results container-top">
+				<div class="filter-results container-top" data-aos="fade-zoom-in" data-aos-easing="ease-in-back">
 					{{fn('do_shortcode','[searchandfilter query="1" action="show-results"]')}}
 				</div>
-				<div class="load-more-btn">
+				<div class="load-more-btn" data-aos="fade-zoom-in" data-aos-easing="ease-in-back">
 				    {{fn('do_shortcode','[searchandfilter query="1" field="load_more"]')}}					
 				</div>
 			</div>
