--- a/wp-content/themes/henderson/views/partials/book.twig
+++ b/wp-content/themes/henderson/views/partials/book.twig
@@ -1,4 +1,4 @@
-<div class="booking-details center padding">
+<div class="booking-details center padding" data-aos="fade-zoom-in" data-aos-easing="ease-in-back">
 	<h2>{{book.title}}</h2>
 	<div class="content">{{book.description}}</div>
 	<div class="btns">
