--- a/wp-content/themes/henderson/views/partials/faq.twig
+++ b/wp-content/themes/henderson/views/partials/faq.twig
@@ -1,7 +1,7 @@
 <section class="faq-section" id="faq-section">
 	<div class="container" data-aos="fade-in">
-		<h2 class="title center">Frequently Asked Questions</h2>
-		<div class="faq-list">
+		<h2 class="title center" data-aos="fade-zoom-in" data-aos-easing="ease-in-back">Frequently Asked Questions</h2>
+		<div class="faq-list" data-aos="fade-zoom-in" data-aos-easing="ease-in-back">
 			{% if page is not empty %}
 				{% for faq in page %}
 					{% set count = loop.length %}
