--- a/wp-content/themes/henderson/views/single-news.twig
+++ b/wp-content/themes/henderson/views/single-news.twig
@@ -28,7 +28,7 @@
 				</div>
 			</section>
 
-			<section class="similar-news padding-top" id="similar-news">
+			<section class="similar-news padding-top" id="similar-news" data-aos="fade-zoom-in" data-aos-easing="ease-in-back">
 				<div class="container">
 					<h2>Similar News & Insights</h2>
 					<div class="similar-news-list">
