--- a/wp-content/themes/henderson/views/single-services.twig
+++ b/wp-content/themes/henderson/views/single-services.twig
@@ -4,7 +4,7 @@
 		<article class="post-type-{{ post.post_type}}" id="post-{{ post.ID}}">
 			<section class="service-content padding" id="service-content">
 				<div class="container">
-					<p class="breadcrumb">
+					<p class="breadcrumb" data-aos="fade-zoom-in" data-aos-easing="ease-in-back">
 						<a href="/what-we-do/">What WE Do</a>
 						<span>
 							/
