--- a/wp-content/themes/henderson/views/page-who-we-are.twig
+++ b/wp-content/themes/henderson/views/page-who-we-are.twig
@@ -5,7 +5,7 @@
 {% block content %}
 	<section class="{{field.slug}}-page" id="{{field.slug}}-page">
 		<div class="container2">
-			<div class="page-description padding">
+			<div class="page-description padding" data-aos="fade-zoom-in" data-aos-easing="ease-in-back">
 				{% set page = field.meta('page_description') %}
 				<div class="wrapper">
 					<h2>{{page}}</h2>
@@ -23,14 +23,14 @@
 							</div>
 							<div class="story-details">
 								<div class="wrapper">
-									<h2 class="center">{{story.main_title}}</h2>
-									<div class="content h4">
+									<h2 class="center" data-aos="fade-zoom-in" data-aos-easing="ease-in-back">{{story.main_title}}</h2>
+									<div class="content h4" data-aos="fade-zoom-in" data-aos-easing="ease-in-back">
 										{{story.story_content}}
 									</div>
 								</div>
 							</div>
 						</div>
-						<div class="our-accomplishments">
+						<div class="our-accomplishments" data-aos="fade-zoom-in" data-aos-easing="ease-in-back">
 							<h2 class="center">{{story.accomplishment_title}}</h2>
 							<div class="content h4">{{story.accomplishment_desc}}</div>
 							<p class="section-title h4">{{story.sponsor_title}}</p>
@@ -52,7 +52,7 @@
 				{% set mission = field.meta('our_mission') %}
 				<div class="container">
 					<div class="content-section">
-						<div class="content-details">
+						<div class="content-details" data-aos="fade-zoom-in" data-aos-easing="ease-in-back">
 							<div class="logo">{{ function('file_get_contents', Image(mission.logo).src) }}</div>
 							<h3 class="">{{mission.title}}</h3>
 							<div class="content">{{mission.description}}</div>
@@ -68,7 +68,7 @@
 				{% set vision = field.meta('our_vision') %}
 				<div class="container">
 					<div class="content-section">
-						<div class="content-details">
+						<div class="content-details" data-aos="fade-zoom-in" data-aos-easing="ease-in-back">
 							<div class="logo">{{ function('file_get_contents', Image(vision.logo).src) }}</div>
 							<h3 class="">{{vision.title}}</h3>
 							<div class="content">{{vision.description}}</div>
@@ -84,10 +84,11 @@
 				<div class="container">
 					{% set page = field.meta('meet_the_team') %}
 					<div class="wrapper padding">
-						<h2 class="center">{{page.title}}</h2>
+						<h2 class="center" data-aos="fade-zoom-in" data-aos-easing="ease-in-back">{{page.title}}</h2>
 						<div class="team-list padding-top">
 							{% for list in page.team %}
-								<div class="list">
+							{% set delay = (delay|default(100)) + 100 %}
+								<div class="list" data-aos="fade-zoom-in" data-aos-easing="ease-in-back" data-aos-delay={{delay}}>
 									<div class="image-section">
 										<img src="{{Image(list.profile_image).src}}" alt="{{Image(list.profile_image).alt}}" class="img-responsive"/>
 									</div>
@@ -116,11 +117,11 @@
 			<div class="facility padding" id="facility">
 				{% set facil = field.meta('facility') %}
 				<div class="container">
-					<div class="facility-details">
+					<div class="facility-details" data-aos="fade-zoom-in" data-aos-easing="ease-in-back">
 						<h2 class="h2 center">{{facil.title}}</h2>
 						<div class="content">{{facil.description}}</div>
 					</div>
-					<div class="gallery">
+					<div class="gallery" data-aos="fade-zoom-in" data-aos-easing="ease-in-back">
 						<div class="gallery-slider">
 							{% for gal in facil.gallery %}
 								<div class="images">
